Use ForwardRelativePath in BuildFileTree
Summary:
Previously `RelPath` was used.

`ForwardRelativePath` is safer because it guarantees that paths are normalized.

This code was written while experimenting on Buck performance; experiements go on, but this code is good to land.

Reviewed By: mykola-semko

shipit-source-id: a2ab14b59dbc29c441411bad302a2475672517ee